--- a/configuration/playbooks/deploy_jellyfin.yml
+++ b/configuration/playbooks/deploy_jellyfin.yml
@@ -1,18 +1,94 @@
 ---
-- name: Déployer Jellyfin sur le cluster
+- name: Déploiement de Jellyfin (Média Center)
   hosts: master
   become: yes
   tasks:
-    - name: Créer le dossier de destination
+    - name: Créer le dossier pour les manifestes sur le serveur
       file:
         path: /home/devops/k8s-manifests
         state: directory
+        owner: devops
+        group: devops
 
-    - name: Copier le fichier Jellyfin sur le master
+    - name: Créer le fichier Manifeste Jellyfin directement sur le serveur
       copy:
-        src: ../manifests/jellyfin.yaml
         dest: /home/devops/k8s-manifests/jellyfin.yaml
         owner: devops
+        content: |
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: media
+          ---
+          apiVersion: v1
+          kind: PersistentVolumeClaim
+          metadata:
+            name: jellyfin-config-pvc
+            namespace: media
+          spec:
+            accessModes:
+              - ReadWriteOnce
+            storageClassName: longhorn
+            resources:
+              requests:
+                storage: 10Gi
+          ---
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: jellyfin
+            namespace: media
+          spec:
+            replicas: 1
+            selector:
+              matchLabels:
+                app: jellyfin
+            template:
+              metadata:
+                labels:
+                  app: jellyfin
+                annotations:
+                  # C'EST ICI LA CLÉ DU SUCCÈS POUR VELERO :
+                  backup.velero.io/backup-volumes: jellyfin-config-storage
+              spec:
+                containers:
+                  - name: jellyfin
+                    image: jellyfin/jellyfin:latest
+                    ports:
+                      - containerPort: 8096
+                    volumeMounts:
+                      - name: jellyfin-config-storage
+                        mountPath: /config
+                      - name: jellyfin-cache-storage
+                        mountPath: /cache
+                    resources:
+                      requests:
+                        memory: "1Gi"
+                        cpu: "500m"
+                      limits:
+                        memory: "2Gi"
+                        cpu: "2000m"
+                volumes:
+                  - name: jellyfin-config-storage
+                    persistentVolumeClaim:
+                      claimName: jellyfin-config-pvc
+                  - name: jellyfin-cache-storage
+                    emptyDir: {}
+          ---
+          apiVersion: v1
+          kind: Service
+          metadata:
+            name: jellyfin-service
+            namespace: media
+          spec:
+            type: NodePort
+            selector:
+              app: jellyfin
+            ports:
+              - protocol: TCP
+                port: 8096
+                targetPort: 8096
+                nodePort: 30000
 
-    - name: Appliquer la config Kubernetes
+    - name: Appliquer le manifeste Jellyfin
       command: /usr/local/bin/k3s kubectl apply -f /home/devops/k8s-manifests/jellyfin.yaml
