--- a/configuration/playbooks/deploy_metallb.yml
+++ b/configuration/playbooks/deploy_metallb.yml
@@ -1,40 +1,18 @@
 ---
-- name: Déployer MetalLB
-  hosts: localhost
-  connection: local
-  become: false
-  vars:
-    metallb_repo_url: "https://metallb.github.io/metallb"
-    metallb_chart_name: "metallb/metallb"
-    metallb_release_name: "metallb"
-    metallb_namespace: "metallb-system"
-    metallb_config_manifest: "{{ playbook_dir | dirname }}/manifests/metallb-config.yaml"
-
+- name: Déployer MetalLB (Load Balancer)
+  hosts: master
+  become: yes
+  environment:
+    KUBECONFIG: /etc/rancher/k3s/k3s.yaml
   tasks:
-    - name: Ajouter le dépôt Helm MetalLB
+    - name: 1. Ajouter le dépôt Helm MetalLB
       kubernetes.core.helm_repository:
         name: metallb
-        repo_url: "{{ metallb_repo_url }}"
-        state: present
+        repo_url: https://metallb.github.io/metallb
 
-    - name: Créer le namespace MetalLB
-      kubernetes.core.k8s:
-        api_version: v1
-        kind: Namespace
-        name: "{{ metallb_namespace }}"
-        state: present
-
-    - name: Installer le chart Helm MetalLB
+    - name: 2. Installer le chart Helm MetalLB
       kubernetes.core.helm:
-        name: "{{ metallb_release_name }}"
-        chart: "{{ metallb_chart_name }}"
-        namespace: "{{ metallb_namespace }}"
-        create_namespace: false
-        state: present
-        wait: true
-
-    - name: Appliquer la configuration MetalLB (IPAddressPool et L2Advertisement)
-      kubernetes.core.k8s:
-        state: present
-        src: "{{ metallb_config_manifest }}"
-        wait: true
+        name: metallb
+        chart_ref: metallb/metallb # <--- C'était ça qui manquait !
+        release_namespace: metallb-system
+        create_namespace: true
